# ASTDistance

./: .ast_distance_config.json  .gitignore  .gitmodules  CHANGELOG.md  CI_CD_COMPLETE.md  CMakeLists.txt  NEXT_ACTIONS.md  PARITY_COMPLETE.md  PORT_LINT_TESTS.md  README.md  SEMANTIC_IMPROVEMENTS.md  TODO.md  TRANSLITERATION_DISTANCE.md  high_priority_ports.md  port_status_report.md
.github/workflows/: build.yml  publish-npm.yml  test.yml
include/: ast_config.hpp  ast_parser.hpp  codebase.hpp  imports.hpp  node_types.hpp  port_lint.hpp  porting_utils.hpp  reexport_config.hpp  similarity.hpp  symbol_analysis.hpp  symbol_extraction.hpp  symbol_extractor.hpp  task_manager.hpp  tensor.hpp  transliteration_similarity.hpp  tree.hpp  tree_lstm.hpp
python/: pyproject.toml
python/ast_distance/: __init__.py  __main__.py  ast_parser.py  cli.py  codebase.py  imports.py  node_types.py  porting_utils.py  similarity.py  task_manager.py  tree.py
python/ast_distance_py/: __init__.py  codebase.py  node_types.py  porting_utils.py  task_manager.py
script/: build.mjs
src/: ast_normalizer.cpp  ast_parser.cpp  main.cpp  similarity.cpp  symbol_analysis.cpp  symbol_extraction.cpp  symbol_extractor.cpp
tests/: pty_run.py  test_cli_filter_guard.py  test_doc_comment_parsing.py  test_kotlin_comment_contamination.py  test_mod_rs_reexport_hints.py  test_provenance_fallback_report.py  test_universal_redirect_guard.py
tests/fixtures/: kotlin_doc_comments.kt
typescript/: PUBLISHING.md  README.md  README.md.bak  package.json  tsconfig.json
typescript/src/: agent-guardrails.ts  ast-parser.ts  cli.ts  codebase-comparator.ts  codebase.ts  index.ts  node-maps.ts  similarity.ts  task-manager.ts  types.ts
