[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ast-distance"
version = "0.2.0"
description = "Cross-language AST comparison and porting tools"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-python>=0.23",
]

[project.scripts]
ast_distance = "ast_distance.cli:main"

[tool.setuptools.packages.find]
where = ["."]
